--- a/src/Sesile/ClasseurBundle/Resources/views/Classeur/new.html.twig
+++ b/src/Sesile/ClasseurBundle/Resources/views/Classeur/new.html.twig
@@ -29,7 +29,9 @@
         <br/>
 
         <a href="{{ path('classeur') }}">
-            Retour à la liste des classeur
+            <button type="button" class="btn btn-default navbar-btn">
+                Retour à la liste des classeur
+            </button>
         </a>
     </div>
 {% endblock %}
