--- a/src/Sesile/ClasseurBundle/Resources/views/Classeur/index.html.twig
+++ b/src/Sesile/ClasseurBundle/Resources/views/Classeur/index.html.twig
@@ -7,7 +7,11 @@
             &nbsp;&nbsp;&nbsp;Liste des classeurs
         </div>
         {% include 'SesileClasseurBundle:Classeur:liste.html.twig' %}
-        <a href="{{ path('classeur_new') }}">Créer un classeur</a>
+        <a href="{{ path('classeur_new') }}">
+            <button type="button" class="btn btn-default navbar-btn">
+                Créer un classeur
+            </button>
+        </a>
     </div>
     <script type="application/javascript" src="{{ asset("/datatables/jquery.dataTables.min.js") }}"></script>
     <link type="text/css" href="{{ asset("/datatables/css/jquery.dataTables.css") }}" rel="stylesheet"/>
