--- a/src/Sesile/ClasseurBundle/Resources/views/Formulaires/elpadre.html.twig
+++ b/src/Sesile/ClasseurBundle/Resources/views/Formulaires/elpadre.html.twig
@@ -12,7 +12,7 @@
     <span class="glyphicon glyphicon-play"></span>
     &nbsp;&nbsp;&nbsp;Description
 </div>
-<textarea class="form-control" rows="3" name="desc" id="desc"></textarea>
+<textarea class="form-control" rows="3" name="desc" id="desc" placeholder="Description"></textarea>
 <br>
 
 <div class="titre_form_element">
@@ -41,7 +41,6 @@
 
 <div>
     <br/>
-    <button type="button" class="btn">Annuler</button>
     <button type="submit" class="btn btn-success">Envoyer</button>
 </div>
 <script type="text/javascript">
