--- a/src/Sesile/MainBundle/Resources/views/Default/admin.html.twig
+++ b/src/Sesile/MainBundle/Resources/views/Default/admin.html.twig
@@ -8,7 +8,9 @@
         </div>
         <form action="{{ path('admin') }}" {{ form_enctype(form) }} method="POST">
             {{ form_label(form.msg) }}
-            {{ form_widget(form.msg, attr: ) }}
+            {{ form_widget(form.msg) }}
+
+            {{ form_widget(form.submit, {'attr': {'class': 'btn btn-success' }}) }}
         </form>
     </div>
 {% endblock %}
