--- a/src/Sesile/MainBundle/Resources/views/Default/menu.html.twig
+++ b/src/Sesile/MainBundle/Resources/views/Default/menu.html.twig
@@ -1,5 +1,6 @@
 {% block menu %}
     <div class="menu">
+        <img src="{{ asset(upload_path_logo ~ image) }}" width="60px" height="60px"/>
         <ul>
             <li class="menu-elem menu-bleu">
                 <div class="dd-toggle entete-menu {% if( 'classeur' in app.request.requestUri ) %}titremenu{% endif %}">
