--- a/src/Sesile/ClasseurBundle/Resources/views/Classeur/boutons_action.html.twig
+++ b/src/Sesile/ClasseurBundle/Resources/views/Classeur/boutons_action.html.twig
@@ -1,33 +1,30 @@
 {% if classeur.isValidable(app.user.id) %}
 
     {% if classeur.isSignable(app.user.id) %}
-        <form class="form_action" id="signform" action="{{ path('signform',{'id':classeur.id}) }}">
-            <button type="submit" class="btn btn-success">Valider et Signer</button>
-            <input type="hidden" value="{{ classeur.id }}" name="id"/>
+            <button type="submit" class="btn btn-success btn-valider-signer">
+                <span class="glyphicon glyphicon-ok"></span>
+                &nbsp;Valider et Signer {{ path('signform',{'id':classeur.id}) }}
+            </button>
 
         </form>
     {% else %}
-        <form class="form_action" action="{{ path("classeur_valider") }}" method="post">
-            <button type="submit" class="btn btn-success">
+            <button type="submit" class="btn btn-success btn-valider">
                 <span class="glyphicon glyphicon-ok"></span>
-                Valider le classeur
+                &nbsp;Valider le classeur {{ path("classeur_valider") }}
             </button>
-            <input type="hidden" value="{{ classeur.id }}" name="id"/>
-        </form>
     {% endif %}
 
-    <form class="form_action" action="{{ path("classeur_refuser") }}" method="post">
-        <button type="submit" class="btn btn-danger">
+        <button type="submit" class="btn btn-danger btn-refuser">
             <span class="glyphicon glyphicon-remove"></span>
-            Refuser
+            &nbsp;Refuser {{ path("classeur_refuser") }}
         </button>
-        <input type="hidden" value="{{ classeur.id }}" name="id"/>
-    </form>
 {% endif %}
 
 {% if retractable %}
     <form class="form_action" action="{{ path("classeur_retracter") }}" method="post">
-        <button type="submit" class="btn btn-warning">Se r&eacute;tracter</button>
+        <button type="submit" class="btn btn-warning">
+            <span class="glyphicon glyphicon-thumbs-down"></span>
+            &nbsp;Se r&eacute;tracter</button>
         <input type="hidden" value="{{ classeur.id }}" name="id"/>
     </form>
 {% endif %}
@@ -36,7 +33,7 @@
     <form id='suprclasseur' class="form_action pull-right" action="{{ path("classeur_supprimer") }}" method="post">
         <button type="submit" class="btn btn-danger">
             <span class="glyphicon glyphicon-trash"></span>
-            Retirer
+            &nbsp;Retirer
         </button>
         <input type="hidden" value="{{ classeur.id }}" name="id"/>
     </form>
@@ -44,5 +41,7 @@
 
 
 {% if classeur.isModifiable(app.user.id) %}
-    <button class="btn btn-success pull-right" type="submit">Enregistrer les modifications</button>
+    <button class="btn btn-success pull-right" class="btn-modifs">
+        <span class="glyphicon glyphicon-saved"></span>
+        &nbsp;Enregistrer les modifications</button>
 {% endif %}
