--- a/src/Sesile/ClasseurBundle/Resources/views/Classeur/edit.html.twig
+++ b/src/Sesile/ClasseurBundle/Resources/views/Classeur/edit.html.twig
@@ -18,12 +18,12 @@
         {% endif %}
         <button id="btn_historique" type="button" class="btn btn-info" data-toggle="modal" data-target="#myModal">
             <span class="glyphicon glyphicon-sort-by-attributes-alt"></span>
-            &nbsp;&nbsp;Historique
+            &nbsp;Historique
         </button>
         {% include "SesileClasseurBundle:Classeur:boutons_action.html.twig" %}
         <br>
 
-        <form action="{{ path("classeur_update") }}" method="post">
+        <form id="form_edit" action="{{ path("classeur_update") }}" method="post">
             <input type="hidden" name="id" value="{{ classeur.id }}"/>
 
             <div class="titre_form_element">
@@ -124,17 +124,16 @@
                     });
 
             $("#suprclasseur").submit(function (e) {
-
-
                 if (confirm('Confirmez-vous le retrait du classeur ?')) {
 
                 } else {
                     e.preventDefault();
                     return false;
-
                 }
+            });
 
-
+            $(".btn-modifs").click(function() {
+                $("#form_edit").submit();
             });
         </script>
     </div>
