--- a/src/Sesile/MainBundle/Resources/views/Default/index.html.twig
+++ b/src/Sesile/MainBundle/Resources/views/Default/index.html.twig
@@ -38,9 +38,11 @@
             <img src="{{ asset("/images/badlogo.png") }}"/>
         </div>
     </a>
-    <div id="img_imposetonstyle">
-            {# TODO : <img src="{{ asset(upload_path_logo ~ image) }}" width="60px" height="60px"/> #}
-        <img src="/images/logosictiampetit.png" width="60px" height="60px"/>
+    <div class="border_imposetonstyle">
+        <div id="img_imposetonstyle">
+            {#TODO : <img src="{{ asset(upload_path_logo ~ image) }}" width="60px" height="60px"/> #}
+            <img src="{{ asset("/images/Logo-Officiel-SICTIAM_taille250px.jpg")}}" width="80px" height="80px"/>
+        </div>
     </div>
     {% include 'SesileMainBundle:Default:menu.html.twig' %}
 </div>
