--- a/src/Sesile/ClasseurBundle/Resources/views/Classeur/liste.html.twig
+++ b/src/Sesile/ClasseurBundle/Resources/views/Classeur/liste.html.twig
@@ -2,9 +2,10 @@
     <thead>
     <tr>
         <th>Titre du classeur</th>
-        <th>Intervention</th>
         <th>Date de création</th>
         <th>Date limite de validation</th>
+        <th>Type de classeur</th>
+        <th>Intervention</th>
         <th>Statut actuel</th>
         <th>Action</th>
     </tr>
@@ -13,9 +14,10 @@
     {% for classeur in classeurs %}
         <tr class="classeur-row" data-id="{{ classeur.id }}">
             <td>{{ classeur.nom }}</td>
-            <td>inter</td>
-            <td>{% if classeur.creation %}{{ classeur.creation | date('d/m/Y H:i:s') }}{% endif %}</td>
+            <td>{% if classeur.creation %}{{ classeur.creation | date('d/m/Y') }}{% endif %}</td>
             <td>{% if classeur.validation %}{{ classeur.validation | date('d/m/Y') }}{% endif %}</td>
+            <td>{{ classeur.type }}</td>
+            <td>{{ classeur.validant }}</td>
             <td class="statut">
                 <span class="glyphicon statut_{{ classeur.status }}"></span>
             </td>
