corrction gestion des circuits

--- a/src/Sesile/CircuitBundle/Resources/views/Circuit/gestion.html.twig
+++ b/src/Sesile/CircuitBundle/Resources/views/Circuit/gestion.html.twig
@@ -63,6 +63,9 @@
     </div>
 </form>
 
+<script type="text/javascript">
+    var path = "{{ asset(upload_path) }}";
+</script>
 <script type="text/javascript" src="{{ asset('/js/jquery-ui.min.js') }}"></script>
 <script type="text/javascript" src="{{ asset('/js/circuit.js') }}"></script>
 <script type="text/javascript" src="{{ asset('/js/autocomplete.js') }}"></script>
