--- a/src/Sesile/MainBundle/Resources/views/Collectivite/edit.html.twig
+++ b/src/Sesile/MainBundle/Resources/views/Collectivite/edit.html.twig
@@ -7,6 +7,7 @@
             &nbsp;&nbsp;&nbsp;Editer une collectivité
         </div>
         <br>
+
         {{ form_start(edit_form) }}
             {{ form_label(edit_form.nom) }}
             {{ form_widget(edit_form.nom) }}
@@ -22,6 +23,8 @@
             <br>
             {{ form_widget(edit_form.submit, {'attr': {'class': 'btn btn-success'}}) }}
             <br>
-        {{ form(delete_form) }}
+        {{ form_end(edit_form) }}
+        {{ form_start(delete_form) }}
+        {{ form_end(delete_form) }}
     </div>
 {% endblock %}
