Menu + logo sictiam

--- a/src/Sesile/MainBundle/Resources/views/Default/menu.html.twig
+++ b/src/Sesile/MainBundle/Resources/views/Default/menu.html.twig
@@ -67,7 +67,7 @@
                 <div class="dd-toggle entete-menu {% if( '/user/' in app.request.requestUri ) %}titremenu{% endif %}">
                     <a href="#">
                         <div class="rectanglemenu" id="vertclair"></div>
-                        Utilisateurs<b class="caret carette"></b></a>
+                        Administration<b class="caret carette"></b></a>
                 </div>
                 <ul class="dd-menu">
                     <li>
