Champs date validation obligatoire dans le dépot d'un classeur

--- a/src/Sesile/ClasseurBundle/Resources/views/Formulaires/elpadre.html.twig
+++ b/src/Sesile/ClasseurBundle/Resources/views/Formulaires/elpadre.html.twig
@@ -19,7 +19,7 @@
     <span class="glyphicon glyphicon-play"></span>
     &nbsp;&nbsp;&nbsp;Date limite de validation
 </div>
-<input class="datepicker" id="validation" name="validation" type="datetime"/>
+<input class="datepicker" id="validation" name="validation" type="datetime" required="required"/>
 <br>
 
 <div class="titre_form_element">
