--- a/src/Sesile/ClasseurBundle/Resources/views/Classeur/boutons_action.html.twig
+++ b/src/Sesile/ClasseurBundle/Resources/views/Classeur/boutons_action.html.twig
@@ -8,16 +8,16 @@
 
         </form>
     {% else %}
-            <button type="submit" class="btn btn-success btn-valider">
-                <span class="glyphicon glyphicon-ok"></span>
-                &nbsp;Valider le classeur {{ path("classeur_valider") }}
-            </button>
+        <button type="submit" class="btn btn-success btn-valider" data-action="{{ path("classeur_valider") }}">
+            <span class="glyphicon glyphicon-ok"></span>
+            &nbsp;Valider le classeur
+        </button>
     {% endif %}
 
-        <button type="submit" class="btn btn-danger btn-refuser">
-            <span class="glyphicon glyphicon-remove"></span>
-            &nbsp;Refuser {{ path("classeur_refuser") }}
-        </button>
+    <button type="submit" class="btn btn-danger btn-refuser" data-action="{{ path("classeur_refuser") }}">
+        <span class="glyphicon glyphicon-remove"></span>
+        &nbsp;Refuser
+    </button>
 {% endif %}
 
 {% if retractable %}
