insertion image dans menu fini

--- a/src/Sesile/MainBundle/Resources/views/Default/index.html.twig
+++ b/src/Sesile/MainBundle/Resources/views/Default/index.html.twig
@@ -38,13 +38,11 @@
             <img src="{{ asset("/images/badlogo.png") }}"/>
         </div>
     </a>
-    <div class="border_imposetonstyle">
-        <div id="img_imposetonstyle">
-            {#TODO : <img src="{{ asset(upload_path_logo ~ image) }}" width="60px" height="60px"/> #}
-            <img src="{{ asset("/images/Logo-Officiel-SICTIAM_taille250px.jpg")}}" width="80px" height="80px"/>
-        </div>
-    </div>
     {% include 'SesileMainBundle:Default:menu.html.twig' %}
+        <div id="img_collectivite">
+            {#TODO : <img src="{{ asset(upload_path_logo ~ image) }}" width="60px" height="60px"/> #}
+            <img src="{{ asset("/images/Logo-Officiel-SICTIAM_taille250px.jpg")}}" width="75px" height="75px"/>
+        </div>
 </div>
 
 <div id="droite">
