radio bouton dans ajour d'1 classeur + début mise en page délégation

--- a/src/Sesile/ClasseurBundle/Resources/views/Formulaires/elpadre.html.twig
+++ b/src/Sesile/ClasseurBundle/Resources/views/Formulaires/elpadre.html.twig
@@ -3,6 +3,20 @@
 
 <div class="titre_form_element">
     <span class="glyphicon glyphicon-play"></span>
+    &nbsp;&nbsp;&nbsp;Visibilit&eacute;
+    </div>
+    <label>
+        <input id="radio-publique" type="radio" value="0" name="visibilite" checked="checked">
+        Publique
+    </label>
+    <label>
+        <input id="radio-prive" type="radio" name="visibilite" value="-1">
+        Priv&eacute;
+    </label>
+</div>
+
+<div class="titre_form_element">
+    <span class="glyphicon glyphicon-play"></span>
     &nbsp;&nbsp;&nbsp;Titre
 </div>
 <input class="form-control" id="name" name="name" placeholder="Nom">
