--- a/src/Sesile/ClasseurBundle/Resources/views/Classeur/boutons_action.html.twig
+++ b/src/Sesile/ClasseurBundle/Resources/views/Classeur/boutons_action.html.twig
@@ -2,7 +2,7 @@
 
     {% if classeur.isSignable(app.user.id) %}
         <button type="submit" class="btn btn-success btn-valider-signer"
-                data-action="{{ path('signform',{'id':classeur.id}) }}>
+                data-action="{{ path('signform',{'id':classeur.id}) }}">
                 <span class="glyphicon glyphicon-ok"></span>
         &nbsp;Valider et Signer
         </button>
