je sais plus...

--- a/src/Sesile/ClasseurBundle/Resources/views/Classeur/edit.html.twig
+++ b/src/Sesile/ClasseurBundle/Resources/views/Classeur/edit.html.twig
@@ -30,7 +30,8 @@
                 <span class="glyphicon glyphicon-play"></span>
                 &nbsp;&nbsp;&nbsp;Titre
             </div>
-            <input class="form-control" id="name" name="name" disabled placeholder="Nom" value="{{ classeur.nom }}">
+            <input class="form-control" id="name" name="name" disabled placeholder="Nom" required="required"
+                   value="{{ classeur.nom }}">
             <br>
 
             <div class="titre_form_element">
