radio bouton dans ajour d'1 classeur + début mise en page délégation

--- a/src/Sesile/DelegationsBundle/Resources/views/Default/ajout.html.twig
+++ b/src/Sesile/DelegationsBundle/Resources/views/Default/ajout.html.twig
@@ -5,8 +5,8 @@
     <link rel="stylesheet" type="text/css" href="{{ asset("/css/datepicker.css") }}">
     <div class="bloc_page">
         <div class="titre_page">
-            <span class="glyphicon glyphicon-pencil"></span>
-            &nbsp;&nbsp;&nbsp;Ajouter une délégation
+            <span class="glyphicon glyphicon-export"></span>
+            &nbsp;&nbsp;&nbsp;Déléguer ses droits
         </div>
         <form action="{{ path("delegation_create") }}" method="post">
             <select name="user">
