--- a/src/Sesile/ClasseurBundle/Resources/views/Classeur/index.html.twig
+++ b/src/Sesile/ClasseurBundle/Resources/views/Classeur/index.html.twig
@@ -28,12 +28,13 @@
                     "sNext": "",
                     "sLast": "",
                     "sZeroRecords": "Vous n'avez attribu&eacute; aucune d&eacute;l&eacute;gation ",
-                    "sEmptyTable": "Vous n'avez attribu&eacute; aucune d&eacute;l&eacute;gation "
+                    "sEmptyTable": "Vous n'avez attribu&eacute; aucune d&eacute;l&eacute;gation ",
+                    "sLengthMenu": "Afficher _MENU_ records par page"
                 }
             },
             "iDisplayLength": 15,
             "aLengthMenu": [15, 30, 50, 100],
-            "sDom": 'lift<"footer_datatables"p>',
+            "sDom": 'lft<"footer_datatables"p>',
             "aoColumnDefs": [
                 { "bSortable": false, "aTargets": [ 4, 5 ] }
             ],
