--- a/src/Sesile/MainBundle/Resources/views/Default/index.html.twig
+++ b/src/Sesile/MainBundle/Resources/views/Default/index.html.twig
@@ -126,7 +126,7 @@
                         <div id="liste_classeurs">
                             <div class="titre_bloc_accueil">
                                 <span class="glyphicon glyphicon-eye-open"></span>
-                                Classeurs visibles
+                                Liste des classeurs
                             </div>
                             {% render url("liste_classeurs") %}
                         </div>
@@ -141,6 +141,7 @@
                                         "sInfoEmpty": "Affichage de l'&eacute;lement 0 &agrave; 0 sur 0 &eacute;l&eacute;ments",
                                         "sInfoFiltered": "(filtr&eacute; de _MAX_ &eacute;l&eacute;ments au total)",
                                         "sZeroRecords": "Aucun enregistrement &agrave; afficher",
+                                        "sLengthMenu": "Afficher _MENU_ classeurs par page",
                                         "oPaginate": {
                                             "sFirst": "",
                                             "sPrevious": "",
@@ -150,7 +151,7 @@
                                     },
                                     "iDisplayLength": 15,
                                     "aLengthMenu": [15, 30, 50, 100],
-                                    "sDom": 'lift<"footer_datatables"p>',
+                                    "sDom": 'lft<"footer_datatables"p>',
                                     "aoColumnDefs": [
                                         { "bSortable": false, "aTargets": [ 4, 5 ] }
                                     ],
@@ -164,6 +165,7 @@
                                         "sInfoEmpty": "Affichage de l'&eacute;lement 0 &agrave; 0 sur 0 &eacute;l&eacute;ments",
                                         "sInfoFiltered": "(filtr&eacute; de _MAX_ &eacute;l&eacute;ments au total)",
                                         "sZeroRecords": "Aucun enregistrement &agrave; afficher",
+                                        "sLengthMenu": "Afficher _MENU_ classeurs par page",
                                         "oPaginate": {
                                             "sFirst": "",
                                             "sPrevious": "",
@@ -173,7 +175,7 @@
                                     },
                                     "iDisplayLength": 15,
                                     "aLengthMenu": [15, 30, 50, 100],
-                                    "sDom": 'lift<"footer_datatables"p>',
+                                    "sDom": 'lft<"footer_datatables"p>',
                                     "aoColumnDefs": [
                                         { "bSortable": false, "aTargets": [ 4, 5 ] }
                                     ],
