--- a/src/Sesile/UserBundle/Resources/views/Default/index.html.twig
+++ b/src/Sesile/UserBundle/Resources/views/Default/index.html.twig
@@ -51,6 +51,7 @@
                     "sInfo": "Classeur  _START_ &agrave; _END_ sur _TOTAL_",
                     "sInfoEmpty": "Affichage de l'&eacute;lement 0 &agrave; 0 sur 0 &eacute;l&eacute;ments",
                     "sInfoFiltered": "(filtr&eacute; de _MAX_ &eacute;l&eacute;ments au total)",
+                    "sLengthMenu": "Afficher _MENU_ utilisateurs par page",
                     "oPaginate": {
                         "sFirst": "",
                         "sPrevious": "",
@@ -62,7 +63,7 @@
                 },
                 "iDisplayLength": 15,
                 "aLengthMenu": [15, 30, 50, 100],
-                "sDom": 'lift<"footer_datatables"p>',
+                "sDom": 'lft<"footer_datatables"p>',
                 "aoColumnDefs": [
                     { "bSortable": false, "aTargets": [ 3 ] }
                 ],
