--- a/src/Sesile/ClasseurBundle/Resources/views/Classeur/liste.html.twig
+++ b/src/Sesile/ClasseurBundle/Resources/views/Classeur/liste.html.twig
@@ -26,7 +26,7 @@
                     <span class="glyphicon glyphicon-pencil"></span>
                 </a>
                 {% if classeur.isSupprimable(app.user.id) %}
-                    <a href="{{ path("classeur_edit", {'id' : classeur.id }) }}">
+                    <a href="{{ path("classeur_supprimer") }}">
                         <span class="glyphicon glyphicon-trash"></span>
                     </a>
                 {% endif %}
