--- a/web/css/circuit.css
+++ b/web/css/circuit.css
@@ -20,6 +20,10 @@
     margin: auto;
 }
 
+#users_list p, #circuits_list p {
+	margin: 0 0 .3em !important;
+}
+
 #users_list p:hover, #circuits_list p:hover, .list_selected_element {
     background-color: rgba(50, 133, 171, 0.5);
     cursor: pointer;
@@ -33,6 +37,8 @@
     width: 100%;
     margin: auto;
 }
+
+
 
 .top_selects_circuits .titre_select {
     width: 80%;
