Ajout de la créatoin des répertoires d'upload des avatars et du logo de la collectivité

--- a/src/Sesile/ClasseurBundle/Resources/views/Classeur/edit.html.twig
+++ b/src/Sesile/ClasseurBundle/Resources/views/Classeur/edit.html.twig
@@ -1,7 +1,8 @@
 {% extends 'SesileMainBundle:Default:index.html.twig' %}
 
 {% block content %}
-    <script type="text/javascript" src="{{ asset("/js/bootstrap-datepicker.js") }}" xmlns="http://www.w3.org/1999/html"></script>
+    <script type="text/javascript" src="{{ asset("/js/bootstrap-datepicker.js") }}"
+            xmlns="http://www.w3.org/1999/html"></script>
     <link rel="stylesheet" type="text/css" href="{{ asset("/css/datepicker.css") }}">
 
     <div class="bloc_page">
@@ -78,7 +79,8 @@
         <br>
         <br>
         <!-- Modal -->
-        <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+        <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
+             aria-hidden="true">
             <div class="modal-dialog">
                 <div class="modal-content">
                     <div class="modal-header">
