--- a/src/Sesile/DocumentBundle/Resources/views/Document/show.html.twig
+++ b/src/Sesile/DocumentBundle/Resources/views/Document/show.html.twig
@@ -63,7 +63,9 @@
 
 
             {% if doc is not null %}
-                <a id='modifbutton' style="display: none" onclick="javascript:fireDocument('http://{{ servername }}/server.php/{{ doc.repourl }}');return false;" href="#"
+                <a id='modifbutton' style="display: none"
+                   onclick="javascript:fireDocument('http://{{ servername }}/server.php/{{ doc.repourl }}');return false;"
+                   href="#"
                    class="btn btn-primary" role="button">
                     <span class="glyphicon glyphicon-pencil"></span>
                     Editer
@@ -93,25 +95,25 @@
     {% else %}
         <table class="table table-hover table-striped">
             <thead>
-                <tr>
-                    <th>Date</th>
-                    <th>Message</th>
-                </tr>
+            <tr>
+                <th>Date</th>
+                <th>Message</th>
+            </tr>
             </thead>
             <tbody>
-                {% for histo in historyinverse %}
+            {% for histo in historyinverse %}
 
-                    {% if histo.date|date("U") > "-30 seconds"|date("U") %}
-                        <tr class="success">
+                {% if histo.date|date("U") > "-30 seconds"|date("U") %}
+                    <tr class="success">
 
-                    {% else %}
-                        <tr>
-                    {% endif %}
+                {% else %}
+                    <tr>
+                {% endif %}
 
-                    <td><strong>{{ histo.date|date('d.m.Y H:i:s') }} </strong></td>
-                    <td> {{ histo.comment }} </td>
-                    </tr>
-                {% endfor %}
+                <td><strong>{{ histo.date|date('d.m.Y H:i:s') }} </strong></td>
+                <td> {{ histo.comment }} </td>
+                </tr>
+            {% endfor %}
 
             </tbody>
         </table>
