--- a/web/bundles/admingeneratorgenerator/css/nested-list.css
+++ b/web/bundles/admingeneratorgenerator/css/nested-list.css
@@ -34,53 +34,74 @@
  * ------------------------------------------------------------------------- */
 
 /* Style 1'st displayed row */
-.nested-helper tr:nth-child(1)
-{ opacity: 0.80 !important; }
+.nested-helper tr:nth-child(1) {
+    opacity: 0.80 !important;
+}
+
 .nested-helper tr:nth-child(1) th,
-.nested-helper tr:nth-child(1) td
-{ border-top: 1px solid rgba(221, 221, 221, 0.80) !important; }
+.nested-helper tr:nth-child(1) td {
+    border-top: 1px solid rgba(221, 221, 221, 0.80) !important;
+}
 
 /* Style 2'nd displayed row */
-.nested-helper tr:not(.ui-helper-hidden)~tr
-{ opacity: 0.65 !important; }
-.nested-helper tr:not(.ui-helper-hidden)~tr th,
-.nested-helper tr:not(.ui-helper-hidden)~tr td
-{ border-top: 1px solid rgba(221, 221, 221, 0.65) !important; }
+.nested-helper tr:not(.ui-helper-hidden) ~ tr {
+    opacity: 0.65 !important;
+}
+
+.nested-helper tr:not(.ui-helper-hidden) ~ tr th,
+.nested-helper tr:not(.ui-helper-hidden) ~ tr td {
+    border-top: 1px solid rgba(221, 221, 221, 0.65) !important;
+}
 
 /* Style 3'rd displayed row */
-.nested-helper tr:not(.ui-helper-hidden)~tr:not(.ui-helper-hidden)~tr
-{ opacity: 0.50 !important; }
-.nested-helper tr:not(.ui-helper-hidden)~tr:not(.ui-helper-hidden)~tr th,
-.nested-helper tr:not(.ui-helper-hidden)~tr:not(.ui-helper-hidden)~tr td
-{ border-top: 1px solid rgba(221, 221, 221, 0.50) !important; }
+.nested-helper tr:not(.ui-helper-hidden) ~ tr:not(.ui-helper-hidden) ~ tr {
+    opacity: 0.50 !important;
+}
+
+.nested-helper tr:not(.ui-helper-hidden) ~ tr:not(.ui-helper-hidden) ~ tr th,
+.nested-helper tr:not(.ui-helper-hidden) ~ tr:not(.ui-helper-hidden) ~ tr td {
+    border-top: 1px solid rgba(221, 221, 221, 0.50) !important;
+}
 
 /* Style 4'th displayed row */
-.nested-helper tr:not(.ui-helper-hidden)~tr:not(.ui-helper-hidden)~tr:not(.ui-helper-hidden)~tr
-{ opacity: 0.35 !important; }
-.nested-helper tr:not(.ui-helper-hidden)~tr:not(.ui-helper-hidden)~tr:not(.ui-helper-hidden)~tr th,
-.nested-helper tr:not(.ui-helper-hidden)~tr:not(.ui-helper-hidden)~tr:not(.ui-helper-hidden)~tr td
-{ border-top: 1px solid rgba(221, 221, 221, 0.35) !important; }
+.nested-helper tr:not(.ui-helper-hidden) ~ tr:not(.ui-helper-hidden) ~ tr:not(.ui-helper-hidden) ~ tr {
+    opacity: 0.35 !important;
+}
+
+.nested-helper tr:not(.ui-helper-hidden) ~ tr:not(.ui-helper-hidden) ~ tr:not(.ui-helper-hidden) ~ tr th,
+.nested-helper tr:not(.ui-helper-hidden) ~ tr:not(.ui-helper-hidden) ~ tr:not(.ui-helper-hidden) ~ tr td {
+    border-top: 1px solid rgba(221, 221, 221, 0.35) !important;
+}
 
 /* Style 5'th displayed row */
-.nested-helper tr:not(.ui-helper-hidden)~tr:not(.ui-helper-hidden)~tr:not(.ui-helper-hidden)~tr:not(.ui-helper-hidden)~tr
-{ opacity: 0.20 !important; }
-.nested-helper tr:not(.ui-helper-hidden)~tr:not(.ui-helper-hidden)~tr:not(.ui-helper-hidden)~tr:not(.ui-helper-hidden)~tr th,
-.nested-helper tr:not(.ui-helper-hidden)~tr:not(.ui-helper-hidden)~tr:not(.ui-helper-hidden)~tr:not(.ui-helper-hidden)~tr td
-{ border-top: 1px solid rgba(221, 221, 221, 0.20) !important; }
+.nested-helper tr:not(.ui-helper-hidden) ~ tr:not(.ui-helper-hidden) ~ tr:not(.ui-helper-hidden) ~ tr:not(.ui-helper-hidden) ~ tr {
+    opacity: 0.20 !important;
+}
+
+.nested-helper tr:not(.ui-helper-hidden) ~ tr:not(.ui-helper-hidden) ~ tr:not(.ui-helper-hidden) ~ tr:not(.ui-helper-hidden) ~ tr th,
+.nested-helper tr:not(.ui-helper-hidden) ~ tr:not(.ui-helper-hidden) ~ tr:not(.ui-helper-hidden) ~ tr:not(.ui-helper-hidden) ~ tr td {
+    border-top: 1px solid rgba(221, 221, 221, 0.20) !important;
+}
 
 /* Style 6'th displayed row */
-.nested-helper tr:not(.ui-helper-hidden)~tr:not(.ui-helper-hidden)~tr:not(.ui-helper-hidden)~tr:not(.ui-helper-hidden)~tr:not(.ui-helper-hidden)~tr
-{ opacity: 0.05 !important; }
-.nested-helper tr:not(.ui-helper-hidden)~tr:not(.ui-helper-hidden)~tr:not(.ui-helper-hidden)~tr:not(.ui-helper-hidden)~tr:not(.ui-helper-hidden)~tr th,
-.nested-helper tr:not(.ui-helper-hidden)~tr:not(.ui-helper-hidden)~tr:not(.ui-helper-hidden)~tr:not(.ui-helper-hidden)~tr:not(.ui-helper-hidden)~tr td
-{ border-top: 1px solid rgba(221, 221, 221, 0.05) !important; }
+.nested-helper tr:not(.ui-helper-hidden) ~ tr:not(.ui-helper-hidden) ~ tr:not(.ui-helper-hidden) ~ tr:not(.ui-helper-hidden) ~ tr:not(.ui-helper-hidden) ~ tr {
+    opacity: 0.05 !important;
+}
+
+.nested-helper tr:not(.ui-helper-hidden) ~ tr:not(.ui-helper-hidden) ~ tr:not(.ui-helper-hidden) ~ tr:not(.ui-helper-hidden) ~ tr:not(.ui-helper-hidden) ~ tr th,
+.nested-helper tr:not(.ui-helper-hidden) ~ tr:not(.ui-helper-hidden) ~ tr:not(.ui-helper-hidden) ~ tr:not(.ui-helper-hidden) ~ tr:not(.ui-helper-hidden) ~ tr td {
+    border-top: 1px solid rgba(221, 221, 221, 0.05) !important;
+}
 
 /* Style all displayed rows below 6'th */
-.nested-helper tr:not(.ui-helper-hidden)~tr:not(.ui-helper-hidden)~tr:not(.ui-helper-hidden)~tr:not(.ui-helper-hidden)~tr:not(.ui-helper-hidden)~tr:not(.ui-helper-hidden)~tr
-{ opacity: 0 !important; }
-.nested-helper tr:not(.ui-helper-hidden)~tr:not(.ui-helper-hidden)~tr:not(.ui-helper-hidden)~tr:not(.ui-helper-hidden)~tr:not(.ui-helper-hidden)~tr:not(.ui-helper-hidden)~tr th,
-.nested-helper tr:not(.ui-helper-hidden)~tr:not(.ui-helper-hidden)~tr:not(.ui-helper-hidden)~tr:not(.ui-helper-hidden)~tr:not(.ui-helper-hidden)~tr:not(.ui-helper-hidden)~tr td
-{ border-top: 1px solid rgba(221, 221, 221, 0) !important; }
+.nested-helper tr:not(.ui-helper-hidden) ~ tr:not(.ui-helper-hidden) ~ tr:not(.ui-helper-hidden) ~ tr:not(.ui-helper-hidden) ~ tr:not(.ui-helper-hidden) ~ tr:not(.ui-helper-hidden) ~ tr {
+    opacity: 0 !important;
+}
+
+.nested-helper tr:not(.ui-helper-hidden) ~ tr:not(.ui-helper-hidden) ~ tr:not(.ui-helper-hidden) ~ tr:not(.ui-helper-hidden) ~ tr:not(.ui-helper-hidden) ~ tr:not(.ui-helper-hidden) ~ tr th,
+.nested-helper tr:not(.ui-helper-hidden) ~ tr:not(.ui-helper-hidden) ~ tr:not(.ui-helper-hidden) ~ tr:not(.ui-helper-hidden) ~ tr:not(.ui-helper-hidden) ~ tr:not(.ui-helper-hidden) ~ tr td {
+    border-top: 1px solid rgba(221, 221, 221, 0) !important;
+}
 
 /* Droppable action highlight, Selected row highlight
  * ==================================================
@@ -89,7 +110,7 @@
  * ------------------------------------------------------------------------- */
 
 .treeTable tbody tr.droppable-before,
-.treeTable tbody tr.droppable-after{
+.treeTable tbody tr.droppable-after {
     box-shadow: 0 0 10px 5px rgba(73, 175, 205, 0.25);
 }
 
@@ -121,12 +142,12 @@
 .treeTable tbody tr.droppable-after > td:first-child:before {
     background-position: -336px -96px;
     bottom: -14px;
-    
-    -webkit-transform:scaleY(-1);
-    -moz-transform:scaleY(-1);
-    -ms-transform:scaleY(-1);
-    -o-transform:scaleY(-1);
-    transform:scaleY(-1);
+
+    -webkit-transform: scaleY(-1);
+    -moz-transform: scaleY(-1);
+    -ms-transform: scaleY(-1);
+    -o-transform: scaleY(-1);
+    transform: scaleY(-1);
 }
 
 /* Highlight selected row */
@@ -147,7 +168,7 @@
 }
 
 /* Remove cell backgrounds to make row background visible */
-.treeTable tbody tr.selected td, .treeTable tbody tr.droppable-in td, 
+.treeTable tbody tr.selected td, .treeTable tbody tr.droppable-in td,
 .treeTable tbody tr.selected th, .treeTable tbody tr.droppable-in th {
     background-color: transparent !important;
 }
@@ -156,4 +177,6 @@
  * ========================
  * This way I don't have to require the full jQuery UI CSS to be loaded.
  * ------------------------------------------------------------------------- */
-.ui-helper-hidden { display: none; }
+.ui-helper-hidden {
+    display: none;
+}
